--- a/app/admin/view/login/ext/demo.html
+++ b/app/admin/view/login/ext/demo.html
@@ -1,4 +1,4 @@
-<div class="layui-btn layui-btn-xs" id="demo-login-btn">演示账号快速登录</div>
+<div class="layui-btn layui-btn-xs" id="demo-login-btn">演示账号一键填写</div>
 <script>
     $('#demo-login-btn').click(function() {
         $('[name="username"]').val('admin')
