--- a/app/admin/view/login/index.html
+++ b/app/admin/view/login/index.html
@@ -37,7 +37,7 @@
             <div class="layui-form-item" style="text-align:center; width:100%;height:100%;margin:0px;">
                 <button class="login-btn" lay-submit>立即登录</button>
             </div>
-            <div class="layui-form-item" style="padding: 10px;">
+            <div class="layui-form-item" style="padding: 10px;text-align: right;">
                 <div class="layui-btn-container">
                     {:event_view_content("AdminLoginType")}
                 </div>
