修改说明；修改基础代码；

--- a/app/admin/view/mall/goods/read.html
+++ b/app/admin/view/mall/goods/read.html
@@ -101,7 +101,7 @@
                     </div>
                     <div class="value">
                         <div class="article-item">
-                            {$row.describe|raw|ua_htmlspecialchars_decode}
+                            {$row.describe|raw}
                         </div>
                     </div>
                 </div>
