--- a/view/index/welcome.html
+++ b/view/index/welcome.html
@@ -166,7 +166,7 @@
             })
         })
     </script>
-    {:ua_htmlspecialchars_decode(sysconfig('site','site_js_insert'))}
+    {:sysconfig('site','site_js_insert')}
 </body>
 
 </html>
