开始通过git升级版本

--- a/app/admin/view/index/welcome.html
+++ b/app/admin/view/index/welcome.html
@@ -152,6 +152,10 @@
                                     <td>ThinkPHP</td>
                                     <td>{:\\think\\App::VERSION}</td>
                                 </tr>
+                                <tr>
+                                    <td>PHP</td>
+                                    <td>{:PHP_VERSION}</td>
+                                </tr>
 
                             </tbody>
                         </table>
