--- a/app/admin/view/login/index.html
+++ b/app/admin/view/login/index.html
@@ -32,7 +32,8 @@
             <div class="tip">
                 <span class="icon-nocheck"></span>
                 <span class="login-tip">保持登录</span>
-                <a href="javascript:" class="forget-password">忘记密码？</a>
+                {:event_view_replace('<a href="javascript:" class="forget-password">忘记密码？</a>','AdminLoginForget')}
+
             </div>
             <div class="layui-form-item" style="text-align:center; width:100%;height:100%;margin:0px;">
                 <button class="login-btn" lay-submit>立即登录</button>
