增加js的事件处理；增加忘记密码的js替换事件；发布新版本；

--- a/app/admin/view/login/index.html
+++ b/app/admin/view/login/index.html
@@ -33,6 +33,7 @@
                 <span class="icon-nocheck"></span>
                 <span class="login-tip">保持登录</span>
                 {:event_view_replace('<a href="javascript:" class="forget-password">忘记密码？</a>','AdminLoginForget')}
+                {:event_view_replace_js('AdminLoginForget')}
 
             </div>
             <div class="layui-form-item" style="text-align:center; width:100%;height:100%;margin:0px;">
