--- a/extend/base/admin/view/index/edit_password.html
+++ b/extend/base/admin/view/index/edit_password.html
@@ -11,7 +11,7 @@
             </div>
 
             <div class="layui-form-item">
-                <label class="layui-form-label">登录密码</label>
+                <label class="layui-form-label">新登录密码</label>
                 <div class="layui-input-block">
                     <input type="password" name="password" class="layui-input" lay-verify="required"  lay-reqtext="请输入登录密码" placeholder="请输入登录密码" value="">
                     <tip>填写登录密码。</tip>
@@ -19,7 +19,7 @@
             </div>
 
             <div class="layui-form-item">
-                <label class="layui-form-label">确认密码</label>
+                <label class="layui-form-label">确认新密码</label>
                 <div class="layui-input-block">
                     <input type="password" name="password_again" class="layui-input" lay-verify="required"  lay-reqtext="请输入确认密码" placeholder="请输入确认密码" value="">
                     <tip>填写再次登录密码。</tip>
