新增手机端浏览模式

--- a/extend/base/admin/view/common/_require.html
+++ b/extend/base/admin/view/common/_require.html
@@ -30,4 +30,5 @@
 <script src="__STATIC__/plugs/jq-module/city-picker/js/city-picker.data.min.js"></script>
 <script src="__STATIC__/plugs/jq-module/city-picker/js/city-picker.min.js"></script>
 <script src="__STATIC__/plugs/clipboard.js/clipboard.min.js"></script>
+<script src="__STATIC__/plugs/ulthon-admin/table.js"></script>
 <script src="__STATIC__/plugs/ulthon-admin/ulthon-admin.js"></script>
