给参数输入组件增加拖动排序

--- a/extend/base/admin/view/common/_require.html
+++ b/extend/base/admin/view/common/_require.html
@@ -26,6 +26,10 @@
 <script src="__STATIC__/plugs/lay-module/iconPicker/iconPickerFa.js"></script>
 <script src="__STATIC__/plugs/lay-module/autocomplete/autocomplete.js"></script>
 <script src="__STATIC__/plugs/vue-2.6.10/vue.min.js"></script>
+
+<script src="__STATIC__/plugs/Sortable.min.js"></script>
+<script src="__STATIC__/plugs/vuedraggable.umd.min.js"></script>
+
 <script src="__STATIC__/plugs/ckeditor4/ckeditor.js"></script>
 <script src="__STATIC__/plugs/jq-module/city-picker/js/city-picker.data.min.js"></script>
 <script src="__STATIC__/plugs/jq-module/city-picker/js/city-picker.min.js"></script>
