--- a/extend/base/admin/view/mall/goods/edit.html
+++ b/extend/base/admin/view/mall/goods/edit.html
@@ -75,7 +75,7 @@
         <div class="layui-form-item full-line">
             <label class="layui-form-label">属性（指定列）</label>
             <div class="layui-input-block">
-                <div data-toggle="property-input" data-name="property_static">{$row.property_static|raw|default=''}</div>
+                <div data-toggle="property-input" data-name="property_static" data-field='{memory_size:"内存",disk_size:"硬盘",cpu_nums:"CPU核心数"}'>{$row.property_static|raw|default=''}</div>
             </div>
         </div>
         <div class="layui-form-item full-line">
