--- a/public/static/plugs/lay-module/propertyInput/propertyInput.css
+++ b/public/static/plugs/lay-module/propertyInput/propertyInput.css
@@ -1,8 +1,6 @@
-.property-input-container .input-item {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
 .property-input-container .input-item .input-value {
   min-width: 240px;
+}
+.property-input-container .input-item .input-option {
+  white-space: nowrap;
 }
