--- a/public/static/plugs/lay-module/propertyInput/propertyInput.scss
+++ b/public/static/plugs/lay-module/propertyInput/propertyInput.scss
@@ -1,12 +1,11 @@
 .property-input-container {
-
     .input-item {
-        display        : flex;
-        align-items    : center;
-        justify-content: flex-start;
-
         .input-value {
             min-width: 240px;
+        }
+
+        .input-option{
+            white-space: nowrap;
         }
     }
 }
