增加引入文件扩展事件

--- a/extend/base/admin/view/common/_require.html
+++ b/extend/base/admin/view/common/_require.html
@@ -3,6 +3,8 @@
 <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
 
+{:event_view_content('AdminLayoutRequireBefore')}
+
 <link rel="stylesheet" href="__STATIC__/admin/css/public.css" media="all">
 <link rel="stylesheet" href="__STATIC__/common/css/theme/index.css">
 
@@ -37,3 +39,5 @@
 <script src="__STATIC__/plugs/clipboard.js/clipboard.min.js"></script>
 <script src="__STATIC__/plugs/ulthon-admin/table.js"></script>
 <script src="__STATIC__/plugs/ulthon-admin/ulthon-admin.js"></script>
+
+{:event_view_content('AdminLayoutRequireAfter')}
