完成timer_limit的预搜索传值，发布新版本

--- a/extend/base/admin/view/index/welcome.html
+++ b/extend/base/admin/view/index/welcome.html
@@ -156,6 +156,12 @@
                                     <td>PHP</td>
                                     <td>{:PHP_VERSION}</td>
                                 </tr>
+                                <tr>
+                                    <td>日志</td>
+                                    <td>
+                                        <div layuimini-content-href="{:url('admin/Debug.Log/index',['create_time'=>date('Y-m-d 00:00:00').','])}" data-title="日志管理" class="layui-btn layui-btn-xs layui-btn-primary">今日日志</div>
+                                    </td>
+                                </tr>
 
                             </tbody>
                         </table>
